--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,17 +1,15 @@
-[project]
+[tool.poetry]
 name = "pre-process-bv-csvs"
 version = "0.1.0"
-description = ""
-authors = [
-    {name = "Marc Tremblay",email = "marc.tremblay@gmail.com"}
-]
+description = "Pre-process Berliner Volksbank CSVs for GnuCash import"
+authors = ["Marc Tremblay <marc.tremblay@gmail.com>"]
 readme = "README.md"
-requires-python = ">=3.13"
-dependencies = [
-    "pandas (>=2.2.3,<3.0.0)",
-    "pandas-stubs (>=2.2.3.250308,<3.0.0.0)"
-]
+package-mode = false
 
+[tool.poetry.dependencies]
+python = "^3.13"
+pandas = "^2.2.3"
+pandas-stubs = "^2.2.3.250308"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
